retial-shop/k8s.ingress-controller/retail-store-manifest/06-ingress/01-ingress-http-instance-mode.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-http-instance-mode
  labels:
    app.kubernetes.io/name: retail-store
    app.kubernetes.io/instance: instance-mode
    app.kubernetes.io/component: ingress
    app.kubernetes.io/owner: capclouds.com
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: retail-store-http-instance-mode
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: ui-np
    ports:
      port: 80
